# padenti

./: CMakeLists.txt  PadentiConfig.cmake.in  README-hand_rotation-branch.md  README.md  annotated.html  cl__classifier_8hpp_source.html  cl__classifier__impl_8hpp_source.html  cl__feat__fmt__traits_8hpp_source.html  cl__img__fmt__traits_8hpp_source.html  cl__tree__trainer_8hpp_source.html  cl__tree__trainer__impl_8hpp_source.html  cl__tree__trainer__impl__init_8hpp_source.html  cl__tree__trainer__impl__learn__best__featthr_8hpp_source.html  cl__tree__trainer__impl__traverse__ts_8hpp_source.html  class_c_l_classifier-members.html  class_c_l_classifier.html  class_c_l_tree_trainer-members.html  class_c_l_tree_trainer.html  class_c_v_image_loader-members.html  class_c_v_image_loader.html  class_c_v_image_r_o_i_loader-members.html  class_c_v_image_r_o_i_loader.html  class_c_v_r_g_b_labels_loader-members.html  class_c_v_r_g_b_labels_loader.html  class_c_v_r_g_b_labels_r_o_i_loader-members.html  class_c_v_r_g_b_labels_r_o_i_loader.html  class_class_weighted_image_sampler-members.html  class_class_weighted_image_sampler.html  class_classifier-members.html  class_classifier.html  class_image-members.html  class_image.html  class_image_loader-members.html  class_image_loader.html  class_image_sampler-members.html  class_image_sampler.html  class_training_set-members.html  class_training_set.html  class_training_set_image-members.html  class_training_set_image.html  (+68 more)
cmake_modules/: FindEigen.cmake  FindOpenCVHighGuiImgProc.cmake  FindPThread.cmake
doc/: Doxyfile.in
script/: ksrc_to_hex.sh  process_dataset.py
search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  pages_1.js  search.js  variables_0.js  variables_1.js  variables_4.js  variables_6.js
src/padenti/: cl_classifier.hpp  cl_classifier_impl.hpp  cl_feat_fmt_traits.hpp  cl_img_fmt_traits.hpp  cl_regressor.hpp  cl_regressor_impl.hpp  cl_rtree_trainer.hpp  cl_rtree_trainer_impl.hpp  cl_rtree_trainer_impl_init.hpp  cl_rtree_trainer_impl_learn_best_featthr.hpp  cl_rtree_trainer_impl_traverse_ts.hpp  cl_tree_trainer.hpp  cl_tree_trainer_impl.hpp  cl_tree_trainer_impl_init.hpp  cl_tree_trainer_impl_learn_best_featthr.hpp  cl_tree_trainer_impl_traverse_ts.hpp  classifier.hpp  classweighted_image_sampler.hpp  classweighted_image_sampler_impl.hpp  cv_image_loader.hpp  cv_image_loader_impl.hpp  image.hpp  image_impl.hpp  image_loader.hpp  image_sampler.hpp  padenti.hpp.in  prng.hpp  rtree.hpp  rtree_impl.hpp  training_set.hpp  training_set_image.hpp  training_set_image_impl.hpp  training_set_impl.hpp  training_set_r.hpp  training_set_r_impl.hpp  training_set_rimage.hpp  training_set_rimage_impl.hpp  tree.hpp  tree_impl.hpp  tree_trainer.hpp  (+2 more)
src/padenti/kernels/: hist_update.cl  learn_best_feature.cl  predict.cl
test/: CMakeLists.txt  feature.cl  test_classifier.cpp  test_regression_dump_euler_wparams.cpp  test_regressor.cpp  test_rtree_trainer.cpp  test_training_set.cpp  test_tree_trainer.cpp
wrappers/matlab/: build_padenti_wrappers.m  feature.cl  feature.dense.cl  feature.singlepixel.cl  feature.singlepixel.noint.cl  feature.singlepixel.singleoffset.cl  padenti_base.hpp  padenti_clear.cpp  padenti_init.cpp  padenti_predict.cpp  padenti_train.cpp  test_padenti_predict.m  test_padenti_train.m
